bin/testsuite/tests/compiler/src/errors/compiler2170.swg
#global testerror "Err0085"

func toto()->{ x: s32 }
{
    return {y: 0}
}
